Basic map now works

--- a/package.json
+++ b/package.json
@@ -57,19 +57,19 @@
     "@macrostrat/cesium-martini": "^1.2.3",
     "@macrostrat/cesium-vector-provider": "workspace:*",
     "@macrostrat/cesium-viewer": "^1.1.5",
-    "@macrostrat/router-components": "^1.0.2",
-    "@types/cesium": "^1.67.4",
     "@macrostrat/column-components": "workspace:*",
     "@macrostrat/hyper": "^2.2.1",
     "@macrostrat/mapbox-react": "workspace:*",
     "@macrostrat/mapbox-styles": "workspace:*",
     "@macrostrat/mapbox-utils": "workspace:*",
+    "@macrostrat/router-components": "^1.0.2",
     "@macrostrat/ui-components": "workspace:*",
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/vector-tile": "^1.3.1",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.5",
     "@turf/boolean-contains": "^6.5.0",
+    "@types/cesium": "^1.67.4",
     "@types/geojson": "^7946.0.10",
     "@types/react-redux": "^7.1.7",
     "@visx/axis": "^2.14.0",
@@ -113,8 +113,8 @@
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
     "use-react-router-breadcrumbs": "^3.2.1",
-    "webpack-glsl-loader": "^1.0.1",
-    "use-resize-observer": "^9.1.0"
+    "use-resize-observer": "^9.1.0",
+    "webpack-glsl-loader": "^1.0.1"
   },
   "prettier": {},
   "packageManager": "yarn@3.2.2",
