--- a/package.json
+++ b/package.json
@@ -13,7 +13,8 @@
     "bootstrap": "yarn"
   },
   "workspaces": [
-    "deps/web-components/packages/*"
+    "deps/web-components/packages/*",
+    "cesium-standalone-example/"
   ],
   "authors": [
     "John Czaplewski <jczaplewski@wisc.edu>",
@@ -26,12 +27,14 @@
     "@babel/preset-env": "^7.19.4",
     "@babel/preset-typescript": "^7.18.6",
     "@macrostrat/revision-info-webpack": "^1.0.0",
-    "@types/node": "^13.13.5",
+    "@types/node": "^18.11.9",
+    "assert": "^2.0.0",
     "babel-loader": "^8.2.3",
     "copy-webpack-plugin": "^11.0.0",
     "core-js": "^3.26.0",
     "css-loader": "^6.2.0",
     "dotenv": "^16.0.1",
+    "dotenv-webpack": "^8.0.1",
     "file-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
     "lerna": "^3.22.1",
@@ -77,6 +80,7 @@
     "axios": "^0.25.0",
     "browserify-zlib": "^0.2.0",
     "cesium": "^1.98.1",
+    "cesium-vector-provider-standalone-example": "workspace:*",
     "chroma-js": "^2.4.2",
     "classnames": "^2.2.6",
     "d3-array": "^3.1.1",
