--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@babel/preset-typescript": "^7.9.0",
     "@macrostrat/revision-info-webpack": "^1.0.0",
     "@types/node": "^13.13.5",
+    "@yarnpkg/sdks": "^3.0.0-rc.39",
     "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
     "copy-webpack-plugin": "^9.0.1",
@@ -104,5 +105,5 @@
     "use-resize-observer": "^9.1.0"
   },
   "prettier": {},
-  "packageManager": "yarn@3.2.2"
+  "packageManager": "yarn@3.4.1"
 }
