--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy:steno": "scripts/deploy-steno",
     "deploy:strata": "scripts/deploy-strata",
     "dev": "webpack serve",
+    "dev:watch": "nodemon --watch .pnp.cjs --watch yarn.lock --exec 'webpack serve'",
     "bootstrap": "yarn"
   },
   "workspaces": [
@@ -41,6 +42,7 @@
     "html-webpack-plugin": "^5.3.2",
     "lerna": "^3.22.1",
     "mini-css-extract-plugin": "^2.4.5",
+    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "react-hot-loader": "^4.13.0",
     "sass": "^1.49.0",
