--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "stylus-loader": "^6.2.0",
     "typescript": "^4.4.4",
     "webpack": "^5.64.1",
+    "webpack-bundle-analyzer": "^4.8.0",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
   },
