--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@macrostrat/map-interface",
+  "name": "@macrostrat/web",
   "private": true,
   "version": "4.1.3",
   "description": "Macrostrat map interface",
@@ -59,8 +59,10 @@
     "@blueprintjs/core": "^4.14.1",
     "@lagunovsky/redux-react-router": "^3.2.0",
     "@loadable/component": "^5.14.1",
+    "@macrostrat/api-utils": "workspace:*",
     "@macrostrat/column-components": "workspace:*",
     "@macrostrat/hyper": "^2.2.1",
+    "@macrostrat/map-interface": "workspace:*",
     "@macrostrat/mapbox-react": "workspace:*",
     "@macrostrat/mapbox-styles": "workspace:*",
     "@macrostrat/mapbox-utils": "workspace:*",
@@ -71,11 +73,13 @@
     "@mapbox/vector-tile": "^1.3.1",
     "@mdx-js/loader": "^1.6.22",
     "@mdx-js/react": "^1.5",
+    "@turf/bbox": "^6.5.0",
     "@turf/boolean-contains": "^6.5.0",
     "@types/geojson": "^7946.0.10",
     "@types/react-redux": "^7.1.7",
     "@visx/axis": "^2.14.0",
     "@visx/scale": "^2.2.2",
+    "@vx/axis": "^0.0.199",
     "axios": "^0.25.0",
     "chroma-js": "^2.4.2",
     "classnames": "^2.2.6",
@@ -95,6 +99,7 @@
     "react-animate-height": "^0.10.9",
     "react-cookie": "^3.0.4",
     "react-dom": "^18.2.0",
+    "react-intersection-observer": "^9.4.3",
     "react-redux": "^7.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
@@ -104,6 +109,7 @@
     "supports-color": "^9.3.1",
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
+    "underscore": "^1.13.6",
     "use-react-router-breadcrumbs": "^3.2.1",
     "use-resize-observer": "^9.1.0"
   },
