Moved files around a bit

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -44,6 +44,7 @@
     "deps/web-components/packages/map-interface/src/helpers.ts",
     "deps/web-components/packages/map-interface/src/dev/tile-extent.ts",
     "deps/web-components/packages/map-interface/src/dev/vector-tile-features.ts",
-    "deps/web-components/packages/map-interface/src/expansion-panel"
+    "deps/web-components/packages/map-interface/src/expansion-panel",
+    "deps/web-components/packages/map-interface/src/map-view/terrain.ts"
   ]
 }
