Updated map style builders

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -45,6 +45,8 @@
     "deps/web-components/packages/map-interface/src/dev/tile-extent.ts",
     "deps/web-components/packages/map-interface/src/dev/vector-tile-features.ts",
     "deps/web-components/packages/map-interface/src/expansion-panel",
-    "deps/web-components/packages/map-interface/src/map-view/terrain.ts"
+    "deps/web-components/packages/map-interface/src/map-view/terrain.ts",
+    "deps/web-components/packages/map-interface/src/styles/line-symbols.ts",
+    "deps/web-components/packages/map-interface/src/styles"
   ]
 }
