--- a/package.json
+++ b/package.json
@@ -93,7 +93,6 @@
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
     "mapbox-gl": "^2.11.0",
-    "mapbox-gl-controls": "^2.3.5",
     "new-github-issue-url": "^1.0.0",
     "react": "^18.2.0",
     "react-animate-height": "^0.10.9",
@@ -112,6 +111,10 @@
     "underscore": "^1.13.6",
     "use-react-router-breadcrumbs": "^3.2.1",
     "use-resize-observer": "^9.1.0"
+  },
+  "resolutions": {
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "prettier": {},
   "packageManager": "yarn@3.4.1"
