--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -5,7 +5,7 @@ on:
     tags:
       - v[0-9]+.[0-9]+.[0-9]+-.*  # Semver Pre-Release
   pull_request:
-    branches: [ master ]
+    branches: [ main ]
 
 jobs:
   docker:
