--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -14,6 +14,8 @@ jobs:
       -
         name: Checkout
         uses: actions/checkout@v3
+        with: 
+          submodules: 'recursive'
       -
         name: Docker meta
         id: meta
