--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -3,7 +3,7 @@ name: Build Development
 on:
   push:
     tags:
-      - v[0-9]+.[0-9]+.[0-9]+-.*  # Semver Pre-Release
+      - v[0-9]+.[0-9]+.[0-9]+-**  # Semver Pre-Release
   pull_request:
     branches: [ main ]
 
