--- a/.github/workflows/build-prod.yaml
+++ b/.github/workflows/build-prod.yaml
@@ -23,6 +23,7 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest,enable={{is_default_branch}}
+            type=raw,value=sha-{{sha}}
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
