--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -30,8 +30,6 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        env:
-          MAPBOX_API_TOKEN: ${{ secrets.MAPBOX_API_TOKEN }}
 
       -
         name: Login to OSG DockerHub
@@ -46,5 +44,7 @@ jobs:
         with:
           context: .
           push: true
+          build-args: |
+            MAPBOX_API_TOKEN=${{ secrets.MAPBOX_API_TOKEN }}
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
