--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -46,5 +46,6 @@ jobs:
           push: true
           build-args: |
             MAPBOX_API_TOKEN=${{ secrets.MAPBOX_API_TOKEN }}
+            PUBLIC_URL=/map/
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
