--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@macrostrat/map-interface",
+  "name": "@macrostrat/web",
   "private": true,
   "version": "4.1.3",
   "description": "Macrostrat map interface",
@@ -59,6 +59,7 @@
     "@blueprintjs/core": "^4.14.1",
     "@lagunovsky/redux-react-router": "^3.2.0",
     "@loadable/component": "^5.14.1",
+    "@macrostrat/api-views": "workspace:*",
     "@macrostrat/column-components": "workspace:*",
     "@macrostrat/hyper": "^2.2.1",
     "@macrostrat/mapbox-react": "workspace:*",
