Updated settings filenames and created initial vite configuration

--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,7 @@
-MAPBOX_API_TOKEN='<your-mapbox-api-token>'
-MACROSTRAT_TILESERVER_DOMAIN='https://devtiles.macrostrat.org'
-MACROSTRAT_API_DOMAIN='https://dev.macrostrat.org'
-PUBLIC_URL="/"
+VITE_MAPBOX_API_TOKEN='<your-mapbox-api-token>'
+VITE_MACROSTRAT_TILESERVER_V2='https://dev.macrostrat.org/tiles'
+VITE_MACROSTRAT_TILESERVER_V1='https://tiles.macrostrat.org'
+VITE_MACROSTRAT_TILESERVER_DOMAIN='https://dev.macrostrat.org/tiles'
+VITE_MACROSTRAT_API_DOMAIN='https://macrostrat.org'
+VITE_CORELLE_API_DOMAIN='https://rotate.macrostrat.org'
+VITE_PUBLIC_URL='/'
