--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "clean": "rm -rf dist/*",
     "deploy:steno": "scripts/deploy-steno",
     "deploy:strata": "scripts/deploy-strata",
-    "dev": "webpack serve",
+    "dev:webpack": "webpack serve",
+    "dev": "vite",
     "dev:watch": "nodemon --watch .pnp.cjs --watch yarn.lock --exec 'webpack serve'",
     "bootstrap": "yarn"
   },
@@ -51,6 +52,7 @@
     "stylus": "^0.55.0",
     "stylus-loader": "^6.2.0",
     "typescript": "^4.4.4",
+    "vite": "^4.4.9",
     "webpack": "^5.64.1",
     "webpack-cli": "^4.9.1",
     "webpack-dev-server": "^4.3.1"
