--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@macrostrat/web",
   "private": true,
-  "version": "4.1.3",
+  "version": "4.2.0",
   "description": "Macrostrat map interface",
-  "main": "index.html",
+  "type": "module",
   "scripts": {
     "bundle": "NODE_ENV=production webpack",
     "clean": "rm -rf dist/*",
@@ -32,6 +32,7 @@
     "@babel/preset-react": "^7.9.4",
     "@babel/preset-typescript": "^7.9.0",
     "@macrostrat/revision-info-webpack": "^1.0.0",
+    "@mdx-js/rollup": "^2.3.0",
     "@types/node": "^13.13.5",
     "@yarnpkg/sdks": "^3.0.0-rc.39",
     "babel-loader": "^8.0.4",
