--- a/package.json
+++ b/package.json
@@ -41,22 +41,16 @@
     "css-loader": "^6.2.0",
     "dotenv": "^16.0.1",
     "file-loader": "^6.2.0",
+    "git-rev-sync": "^3.0.2",
     "html-webpack-plugin": "^5.3.2",
     "lerna": "^3.22.1",
     "mini-css-extract-plugin": "^2.4.5",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
-    "react-hot-loader": "^4.13.0",
     "sass": "^1.49.0",
-    "sass-loader": "^12.4.0",
-    "style-loader": "^3.2.1",
     "stylus": "^0.55.0",
-    "stylus-loader": "^6.2.0",
     "typescript": "^4.4.4",
-    "vite": "^4.4.9",
-    "webpack": "^5.64.1",
-    "webpack-cli": "^4.9.1",
-    "webpack-dev-server": "^4.3.1"
+    "vite": "^4.4.9"
   },
   "dependencies": {
     "@blueprintjs/core": "^4.14.1",
