--- a/package.json
+++ b/package.json
@@ -50,7 +50,8 @@
     "sass": "^1.49.0",
     "stylus": "^0.55.0",
     "typescript": "^4.4.4",
-    "vite": "^4.4.9"
+    "vite": "^4.4.9",
+    "vite-plugin-rewrite-all": "^1.0.1"
   },
   "dependencies": {
     "@blueprintjs/core": "^4.14.1",
