--- a/package.json
+++ b/package.json
@@ -5,13 +5,12 @@
   "description": "Macrostrat map interface",
   "type": "module",
   "scripts": {
-    "bundle": "NODE_ENV=production webpack",
+    "bundle": "vite build",
     "clean": "rm -rf dist/*",
-    "deploy:steno": "scripts/deploy-steno",
+    "deploy:dev": "scripts/deploy-docker",
     "deploy:strata": "scripts/deploy-strata",
     "dev:webpack": "webpack serve",
     "dev": "vite",
-    "dev:watch": "nodemon --watch .pnp.cjs --watch yarn.lock --exec 'webpack serve'",
     "bootstrap": "yarn"
   },
   "workspaces": [
@@ -35,17 +34,9 @@
     "@mdx-js/rollup": "^2.3.0",
     "@types/node": "^13.13.5",
     "@yarnpkg/sdks": "^3.0.0-rc.39",
-    "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
-    "copy-webpack-plugin": "^9.0.1",
-    "css-loader": "^6.2.0",
     "dotenv": "^16.0.1",
-    "file-loader": "^6.2.0",
-    "git-rev-sync": "^3.0.2",
-    "html-webpack-plugin": "^5.3.2",
-    "lerna": "^3.22.1",
     "mini-css-extract-plugin": "^2.4.5",
-    "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
     "sass": "^1.49.0",
     "stylus": "^0.55.0",
@@ -59,6 +50,7 @@
     "@loadable/component": "^5.14.1",
     "@macrostrat/api-views": "workspace:*",
     "@macrostrat/column-components": "workspace:*",
+    "@macrostrat/column-views": "workspace:*",
     "@macrostrat/hyper": "^2.2.1",
     "@macrostrat/mapbox-react": "workspace:*",
     "@macrostrat/mapbox-styles": "workspace:*",
