--- a/.env.example
+++ b/.env.example
@@ -4,4 +4,4 @@ VITE_MACROSTRAT_TILESERVER_V1='https://tiles.macrostrat.org'
 VITE_MACROSTRAT_TILESERVER_DOMAIN='https://dev.macrostrat.org/tiles'
 VITE_MACROSTRAT_API_DOMAIN='https://macrostrat.org'
 VITE_CORELLE_API_DOMAIN='https://rotate.macrostrat.org'
-VITE_PUBLIC_URL='/'
+PUBLIC_URL='/'
