--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@macrostrat/web",
   "private": true,
-  "version": "4.2.0",
+  "version": "5.0.0",
   "description": "Macrostrat map interface",
   "type": "module",
   "scripts": {
@@ -10,8 +10,12 @@
     "deploy:dev": "scripts/deploy-docker",
     "deploy:strata": "scripts/deploy-strata",
     "dev:webpack": "webpack serve",
-    "dev": "vite",
-    "bootstrap": "yarn"
+    "bootstrap": "yarn",
+    "dev": "yarn run server:dev",
+    "build": "vite build",
+    "server": "node ./server/index.js",
+    "server:dev": "npm run server",
+    "server:prod": "cross-env NODE_ENV=production npm run server"
   },
   "workspaces": [
     "deps/web-components/packages/*"
@@ -33,13 +37,13 @@
     "@macrostrat/revision-info-webpack": "^1.0.0",
     "@mdx-js/rollup": "^2.3.0",
     "@types/node": "^13.13.5",
+    "@typescript-eslint/eslint-plugin": "^6.3.0",
+    "@typescript-eslint/parser": "^6.3.0",
     "@yarnpkg/sdks": "^3.0.0-rc.39",
-    "babel-polyfill": "^6.26.0",
     "prettier": "^2.7.1",
     "sass": "^1.49.0",
     "stylus": "^0.55.0",
-    "typescript": "^4.4.4",
-    "vite": "^4.4.9",
+    "typescript": "^5.1.6",
     "vite-plugin-rewrite-all": "^1.0.1"
   },
   "dependencies": {
@@ -59,13 +63,21 @@
     "@mapbox/tilebelt": "^1.0.2",
     "@mapbox/vector-tile": "^1.3.1",
     "@turf/boolean-contains": "^6.5.0",
+    "@types/compression": "^1.7.2",
+    "@types/express": "^4.17.17",
     "@types/geojson": "^7946.0.10",
+    "@types/node": "^20.4.10",
+    "@types/react": "^18.2.20",
+    "@types/react-dom": "^18.2.7",
     "@types/react-redux": "^7.1.7",
     "@visx/axis": "^2.14.0",
     "@visx/scale": "^2.2.2",
+    "@vitejs/plugin-react": "^4.0.4",
     "axios": "^0.25.0",
     "chroma-js": "^2.4.2",
     "classnames": "^2.2.6",
+    "compression": "^1.7.4",
+    "cross-env": "^7.0.3",
     "d3-array": "^3.1.1",
     "d3-axis": "^3.0.0",
     "d3-format": "^1.4.4",
@@ -73,6 +85,7 @@
     "d3-scale": "^4.0.2",
     "d3-selection": "^1.0.0",
     "d3-shape": "^3.2.0",
+    "express": "^4.18.2",
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
     "mapbox-gl": "^2.11.0",
@@ -87,11 +100,20 @@
     "react-router-hash-link": "^2.4.3",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.5",
+    "sirv": "^2.0.3",
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
+    "ts-node": "^10.9.1",
     "use-react-router-breadcrumbs": "^3.2.1",
-    "use-resize-observer": "^9.1.0"
+    "use-resize-observer": "^9.1.0",
+    "vite": "^4.4.9",
+    "vite-plugin-ssr": "^0.4.139"
   },
   "prettier": {},
-  "packageManager": "yarn@3.4.1"
+  "packageManager": "yarn@3.4.1",
+  "dependenciesMeta": {
+    "@esbuild-kit/esm-loader@2.5.5": {
+      "unplugged": true
+    }
+  }
 }
