--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "dev": "yarn run server:dev",
     "build": "vite build",
     "server": "node ./server/index.js",
-    "server:dev": "npm run server",
+    "server:dev": "yarn run server",
     "server:prod": "cross-env NODE_ENV=production npm run server"
   },
   "workspaces": [
@@ -85,6 +85,7 @@
     "d3-scale": "^4.0.2",
     "d3-selection": "^1.0.0",
     "d3-shape": "^3.2.0",
+    "esprima": "^4.0.1",
     "express": "^4.18.2",
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
@@ -101,6 +102,7 @@
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.5",
     "sirv": "^2.0.3",
+    "supports-color": "^9.4.0",
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
     "ts-node": "^10.9.1",
@@ -110,9 +112,12 @@
     "vite-plugin-ssr": "^0.4.139"
   },
   "prettier": {},
-  "packageManager": "yarn@3.4.1",
+  "packageManager": "yarn@3.6.3",
   "dependenciesMeta": {
     "@esbuild-kit/esm-loader@2.5.5": {
+      "unplugged": true
+    },
+    "ts-node@10.9.1": {
       "unplugged": true
     }
   }
