--- a/tsconfig.json
+++ b/tsconfig.json
@@ -36,17 +36,11 @@
       ],
       "@macrostrat/mapbox-utils": [
         "deps/web-components/packages/mapbox-utils/src"
+      ],
+      "@macrostrat/map-interface": [
+        "deps/web-components/packages/map-interface/src"
       ]
     }
   },
-  "include": [
-    "src",
-    "deps/web-components/packages/map-interface/src/helpers.ts",
-    "deps/web-components/packages/map-interface/src/dev/tile-extent.ts",
-    "deps/web-components/packages/map-interface/src/dev/vector-tile-features.ts",
-    "deps/web-components/packages/map-interface/src/expansion-panel",
-    "deps/web-components/packages/map-interface/src/map-view/terrain.ts",
-    "deps/web-components/packages/map-interface/src/styles/line-symbols.ts",
-    "deps/web-components/packages/map-interface/src/styles"
-  ]
+  "include": ["src"]
 }
