--- a/.github/workflows/build-prod.yaml
+++ b/.github/workflows/build-prod.yaml
@@ -44,6 +44,7 @@ jobs:
           build-args: |
             MAPBOX_API_TOKEN=${{ secrets.MAPBOX_API_TOKEN }}
             PUBLIC_URL=/map/
+            MACROSTRAT_API_DOMAIN=""
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
