--- a/.github/workflows/build-prod.yaml
+++ b/.github/workflows/build-prod.yaml
@@ -27,8 +27,6 @@ jobs:
       -
         name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
-        env:
-          MAPBOX_API_TOKEN: ${{ secrets.MAPBOX_API_TOKEN }}
       -
         name: Login to OSG DockerHub
         uses: docker/login-action@v2
@@ -42,7 +40,11 @@ jobs:
         with:
           context: .
           build-args: |
-            MAPBOX_API_TOKEN=${{ secrets.MAPBOX_API_TOKEN }}
+            VITE_MAPBOX_API_TOKEN=${{ secrets.MAPBOX_API_TOKEN }}
+            VITE_MACROSTRAT_TILESERVER_V1='https://tiles.macrostrat.org'
+            VITE_MACROSTRAT_TILESERVER_DOMAIN='https://tileserver.macrostrat-dev.chtc.io/'
+            VITE_MACROSTRAT_API_DOMAIN=
+            VITE_CORELLE_API_DOMAIN='https://rotate.macrostrat.org'
             PUBLIC_URL=/map/
           push: true
           tags: ${{ steps.meta.outputs.tags }}
