--- a/.github/workflows/build-prod.yaml
+++ b/.github/workflows/build-prod.yaml
@@ -41,10 +41,10 @@ jobs:
           context: .
           build-args: |
             VITE_MAPBOX_API_TOKEN=${{ secrets.MAPBOX_API_TOKEN }}
-            VITE_MACROSTRAT_TILESERVER_V1='https://tiles.macrostrat.org'
-            VITE_MACROSTRAT_TILESERVER_DOMAIN='https://tileserver.macrostrat-dev.chtc.io/'
+            VITE_MACROSTRAT_TILESERVER_V1=https://tiles.macrostrat.org
+            VITE_MACROSTRAT_TILESERVER_DOMAIN=https://tileserver.macrostrat-dev.chtc.io
             VITE_MACROSTRAT_API_DOMAIN=
-            VITE_CORELLE_API_DOMAIN='https://rotate.macrostrat.org'
+            VITE_CORELLE_API_DOMAIN=https://rotate.macrostrat.org
             PUBLIC_URL=/map/
           push: true
           tags: ${{ steps.meta.outputs.tags }}
