--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -45,7 +45,11 @@ jobs:
           context: .
           push: true
           build-args: |
-            MAPBOX_API_TOKEN=${{ secrets.MAPBOX_API_TOKEN }}
+            VITE_MAPBOX_API_TOKEN=${{ secrets.MAPBOX_API_TOKEN }}
+            VITE_MACROSTRAT_TILESERVER_V1=https://tiles.macrostrat.org
+            VITE_MACROSTRAT_TILESERVER_DOMAIN=https://tileserver.macrostrat-dev.chtc.io
+            VITE_MACROSTRAT_API_DOMAIN=
+            VITE_CORELLE_API_DOMAIN=https://rotate.macrostrat.org
             PUBLIC_URL=/map/
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
