--- a/package.json
+++ b/package.json
@@ -60,13 +60,14 @@
     "@macrostrat/mapbox-react": "^2.1.0",
     "@macrostrat/mapbox-styles": "workspace:*",
     "@macrostrat/mapbox-utils": "workspace:*",
-    "@macrostrat/timescale": "workspace:*",
     "@macrostrat/style-system": "workspace:*",
+    "@macrostrat/timescale": "workspace:*",
     "@macrostrat/ui-components": "workspace:*",
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/tilebelt": "^1.0.2",
     "@mapbox/vector-tile": "^1.3.1",
     "@turf/boolean-contains": "^6.5.0",
+    "@turf/buffer": "^6.5.0",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
     "@types/geojson": "^7946.0.10",
