--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "deps/ui-components"]
 	path = deps/web-components
 	url = https://github.com/UW-Macrostrat/web-components.git
+[submodule "deps/cesium-viewer"]
+	path = deps/cesium-viewer
+	url = https://github.com/UW-Macrostrat/cesium-viewer.git
