--- a/tsconfig.json
+++ b/tsconfig.json
@@ -37,7 +37,10 @@
       ],
       "@macrostrat/map-interface": [
         "deps/web-components/packages/map-interface/src"
-      ]
+      ],
+      "@macrostrat/cesium-viewer": [
+        "deps/cesium-viewer/src"
+      ],
     }
   },
   "include": ["src"],
