Globe works well as a subpage of the app

--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "@macrostrat/style-system": "workspace:*",
     "@macrostrat/timescale": "workspace:*",
     "@macrostrat/ui-components": "workspace:*",
+    "@macrostrat/web-globe": "workspace:*",
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/tilebelt": "^1.0.2",
     "@mapbox/vector-tile": "^1.3.1",
