Completely excise globe from main part of app

--- a/package.json
+++ b/package.json
@@ -50,17 +50,13 @@
     "@loadable/component": "^5.14.1",
     "@macrostrat/api-utils": "workspace:*",
     "@macrostrat/api-views": "workspace:*",
-    "@macrostrat/cesium-martini": "^1.2.3",
-    "@macrostrat/cesium-vector-provider": "^2.0.2",
-    "@macrostrat/cesium-viewer": "workspace:*",
     "@macrostrat/column-components": "workspace:*",
     "@macrostrat/column-views": "workspace:*",
     "@macrostrat/hyper": "^2.2.1",
     "@macrostrat/map-interface": "workspace:*",
-    "@macrostrat/mapbox-react": "^2.1.0",
+    "@macrostrat/mapbox-react": "workspace:^2.1.0",
     "@macrostrat/mapbox-styles": "workspace:*",
     "@macrostrat/mapbox-utils": "workspace:*",
-    "@macrostrat/router-components": "^1.0.2",
     "@macrostrat/style-system": "workspace:*",
     "@macrostrat/timescale": "workspace:*",
     "@macrostrat/ui-components": "workspace:*",
@@ -82,9 +78,7 @@
     "@visx/axis": "^2.14.0",
     "@visx/scale": "^2.2.2",
     "@vitejs/plugin-react": "^4.0.4",
-    "@znemz/cesium-navigation": "^4.0.0",
     "axios": "^0.25.0",
-    "browserify-zlib": "^0.2.0",
     "cesium": "^1.98.1",
     "chroma-js": "^2.4.2",
     "classnames": "^2.2.6",
@@ -103,7 +97,6 @@
     "immutability-helper": "^3.1.1",
     "mapbox-gl": "^2.15.0",
     "new-github-issue-url": "^1.0.0",
-    "path-browserify": "^1.0.1",
     "pbf": "^3.2.1",
     "prop-types": "^15.6.0",
     "react": "^18.2.0",
@@ -120,8 +113,6 @@
     "regl": "^1.5.0",
     "resium": "^1.13.1",
     "sirv": "^2.0.3",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
     "supports-color": "^9.4.0",
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
