A reasonable basic globe

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "workspaces": [
     "deps/web-components/packages/*",
     "deps/cesium-viewer",
+    "deps/cesium-martini",
     "packages/*"
   ],
   "authors": [
