--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "deps/cesium-viewer"]
 	path = deps/cesium-viewer
 	url = https://github.com/UW-Macrostrat/cesium-viewer.git
+[submodule "deps/cesium-martini"]
+	path = deps/cesium-martini
+	url = https://github.com/davenquinn/cesium-martini.git
