--- a/package.json
+++ b/package.json
@@ -47,6 +47,9 @@
   "dependencies": {
     "@blueprintjs/core": "^4.14.1",
     "@blueprintjs/select": "4",
+    "@blueprintjs/table": "^4",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
     "@lagunovsky/redux-react-router": "^3.2.0",
     "@loadable/component": "^5.14.1",
     "@macrostrat/api-utils": "workspace:*",
@@ -65,6 +68,7 @@
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/tilebelt": "^1.0.2",
     "@mapbox/vector-tile": "^1.3.1",
+    "@mui/material": "^5.14.16",
     "@turf/bbox": "^6.5.0",
     "@turf/boolean-contains": "^6.5.0",
     "@turf/buffer": "^6.5.0",
