--- a/package.json
+++ b/package.json
@@ -122,6 +122,7 @@
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
     "ts-node": "^10.9.1",
+    "use-debounce": "^9.0.4",
     "use-react-router-breadcrumbs": "^3.2.1",
     "use-resize-observer": "^9.1.0",
     "vite": "^4.4.9",
