--- a/package.json
+++ b/package.json
@@ -49,6 +49,8 @@
     "@blueprintjs/select": "4",
     "@lagunovsky/redux-react-router": "^3.2.0",
     "@loadable/component": "^5.14.1",
+    "@macrostrat-web/data-sheet-test": "workspace:*",
+    "@macrostrat-web/globe": "workspace:*",
     "@macrostrat/api-utils": "workspace:*",
     "@macrostrat/api-views": "workspace:*",
     "@macrostrat/column-components": "workspace:*",
@@ -61,7 +63,6 @@
     "@macrostrat/style-system": "workspace:*",
     "@macrostrat/timescale": "workspace:*",
     "@macrostrat/ui-components": "workspace:*",
-    "@macrostrat/web-globe": "workspace:*",
     "@mapbox/point-geometry": "^0.1.0",
     "@mapbox/tilebelt": "^1.0.2",
     "@mapbox/vector-tile": "^1.3.1",
