Made data sheet the dominant object on the page

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -5,5 +5,33 @@
   },
   "typescript.tsdk": ".yarn/sdks/typescript/lib",
   "typescript.enablePromptUseWorkspaceTsdk": true,
-  "prettier.prettierPath": ".yarn/sdks/prettier/index.js"
+  "prettier.prettierPath": ".yarn/sdks/prettier/index.js",
+  "files.exclude": {
+    "**/.git": true,
+    "**/.svn": true,
+    "**/.hg": true,
+    "**/CVS": true,
+    "**/.DS_Store": true,
+    "**/Thumbs.db": true,
+    "**/__pycache__": true,
+    "[!s]*/**": true,
+    "s[!r]*/**": true,
+    "sr[!c]*/**": true,
+    "src/[!p]*/**": true,
+    "src/p[!a]*/**": true,
+    "src/pa[!g]*/**": true,
+    "src/pag[!e]*/**": true,
+    "src/page[!s]*/**": true,
+    "src/pages/[!m]*/**": true,
+    "src/pages/m[!a]*/**": true,
+    "src/pages/ma[!p]*/**": true,
+    "src/pages/map[!s]*/**": true,
+    "src/pages/maps/[!@]*/**": true,
+    "src/pages/maps/@[!i]*/**": true,
+    "src/pages/maps/@i[!d]*/**": true,
+    "src/pages/maps/@id/[!e]*/**": true,
+    "src/pages/maps/@id/e[!d]*/**": true,
+    "src/pages/maps/@id/ed[!i]*/**": true,
+    "src/pages/maps/@id/edi[!t]*/**": true
+  }
 }
