Add variable for url

--- a/.env.example
+++ b/.env.example
@@ -3,5 +3,6 @@ VITE_MACROSTRAT_TILESERVER_V2='https://dev.macrostrat.org/tiles'
 VITE_MACROSTRAT_TILESERVER_V1='https://tiles.macrostrat.org'
 VITE_MACROSTRAT_TILESERVER_DOMAIN='https://dev.macrostrat.org/tiles'
 VITE_MACROSTRAT_API_DOMAIN='https://macrostrat.org'
+VITE_MACROSTRAT_INGEST_API=https://dev.macrostrat.org/api/ingest
 VITE_CORELLE_API_DOMAIN='https://rotate.macrostrat.org'
 PUBLIC_URL='/'
