--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "bootstrap": "yarn",
     "dev": "yarn run server:dev",
     "build": "vite build",
-    "server": "node ./server/index.js",
+    "server": "node --env-file=.env ./server/index.js",
     "server:dev": "yarn run server",
     "server:prod": "cross-env NODE_ENV=production npm run server"
   },
@@ -90,6 +90,7 @@
     "chroma-js": "^2.4.2",
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "cross-env": "^7.0.3",
     "d3-array": "^3.1.1",
     "d3-axis": "^3.0.0",
@@ -102,6 +103,7 @@
     "express": "^4.18.2",
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
+    "jose": "^5.1.2",
     "mapbox-gl": "^2.15.0",
     "new-github-issue-url": "^1.0.0",
     "pbf": "^3.2.1",
