--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -25,7 +25,7 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest-itb
-            type=ref,enable=true,prefix=pr-,suffix=-{{date 'YYYYMMDDHHmmss'}},event=pr
+            type=ref,enable=true,prefix=main-,suffix=-{{date 'YYYYMMDDHHmmss'}}
             type=raw,value=sha-{{sha}}
       -
         name: Set up Docker Buildx
