--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,4 @@ VITE_MACROSTRAT_API_DOMAIN='https://macrostrat.org'
 VITE_MACROSTRAT_INGEST_API=https://dev.macrostrat.org/api/ingest
 VITE_CORELLE_API_DOMAIN='https://rotate.macrostrat.org'
 PUBLIC_URL='/'
+SECRET_KEY='Replace with api signing key'
