Update build actions to include more informative tags

--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -25,6 +25,7 @@ jobs:
           tags: |
             type=semver,pattern={{version}}
             type=raw,value=latest-itb
+            type=ref,event=pr,suffix=-{{date 'YYYYMMDDHHmmss'}}
             type=ref,event=branch,suffix=-{{date 'YYYYMMDDHHmmss'}}
             type=ref,event=tag,suffix=-{{date 'YYYYMMDDHHmmss'}}
             type=raw,value=latest-itb-{{date 'YYYYMMDDHHmmss'}}
