--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,8 +2,6 @@
   "compilerOptions": {
     "baseUrl": "./",
     "moduleResolution": "node",
-    "target": "ES2020",
-    "module": "ES2020",
     "lib": ["DOM", "DOM.Iterable", "ESNext"],
     "strict": false,
     "sourceMap": true,
@@ -28,6 +26,9 @@
       ],
       "@macrostrat/mapbox-styles": [
         "deps/web-components/packages/mapbox-styles/src"
+      ],
+      "@macrostrat/column-views": [
+        "deps/web-components/packages/column-views/src"
       ],
       "@macrostrat/mapbox-react": [
         "deps/web-components/packages/mapbox-react/src"
