--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,3 +1,9 @@
+compressionLevel: mixed
+
+enableGlobalCache: false
+
 pnpFallbackMode: all
+
 pnpMode: loose
-yarnPath: .yarn/releases/yarn-3.6.3.cjs
+
+yarnPath: .yarn/releases/yarn-4.0.2.cjs
