--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "build": "vite build",
     "server": "node --env-file=.env ./server/index.js",
     "server:dev": "yarn run server",
-    "server:prod": "cross-env NODE_ENV=production npm run server"
+    "server:prod": "NODE_ENV=production npm run server"
   },
   "workspaces": [
     "deps/web-components/packages/*",
@@ -66,9 +66,6 @@
     "@macrostrat/style-system": "workspace:*",
     "@macrostrat/timescale": "workspace:*",
     "@macrostrat/ui-components": "workspace:*",
-    "@mapbox/point-geometry": "^0.1.0",
-    "@mapbox/tilebelt": "^1.0.2",
-    "@mapbox/vector-tile": "^1.3.1",
     "@turf/bbox": "^6.5.0",
     "@turf/boolean-contains": "^6.5.0",
     "@turf/buffer": "^6.5.0",
@@ -89,7 +86,6 @@
     "classnames": "^2.2.6",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
-    "cross-env": "^7.0.3",
     "d3-array": "^3.1.1",
     "d3-axis": "^3.0.0",
     "d3-format": "^1.4.4",
@@ -97,17 +93,13 @@
     "d3-scale": "^4.0.2",
     "d3-selection": "^1.0.0",
     "d3-shape": "^3.2.0",
-    "esprima": "^4.0.1",
     "express": "^4.18.2",
     "history": "^5.3.0",
     "immutability-helper": "^3.1.1",
     "jose": "^5.1.2",
     "mapbox-gl": "^2.15.0",
     "new-github-issue-url": "^1.0.0",
-    "pbf": "^3.2.1",
-    "prop-types": "^15.6.0",
     "react": "^18.2.0",
-    "react-animate-height": "^0.10.9",
     "react-cookie": "^3.0.4",
     "react-dom": "^18.2.0",
     "react-intersection-observer": "^9.4.3",
@@ -123,7 +115,6 @@
     "supports-color": "^9.4.0",
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
-    "ts-node": "^10.9.1",
     "use-debounce": "^9.0.4",
     "use-react-router-breadcrumbs": "^3.2.1",
     "use-resize-observer": "^9.1.0",
