--- a/package.json
+++ b/package.json
@@ -69,6 +69,7 @@
     "@turf/bbox": "^6.5.0",
     "@turf/boolean-contains": "^6.5.0",
     "@turf/buffer": "^6.5.0",
+    "@turf/centroid": "^6.5.0",
     "@types/cesium": "^1.67.4",
     "@types/compression": "^1.7.2",
     "@types/express": "^4.17.17",
