--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -2,13 +2,14 @@
   "name": "@macrostrat-web/sift",
   "version": "0.2.0",
   "description": "",
-  "main": "index.js",
+  "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "preinstall": "npm install npm-force-resolutions && npm-force-resolutions",
-    "dev": "gulp watch",
+    "watch": "gulp watch",
     "build": "gulp",
-    "deploy": "scripts/deploy"
+    "deploy": "scripts/deploy",
+    "serve": "python -m http.server 8000"
   },
   "author": "John J Czaplewski <jczaplew@gmail.com>",
   "license": "CC0-1.0",
@@ -38,7 +39,7 @@
     "gulp-minify-css": "^1.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.2.0",
-    "npm-force-resolutions": "0.0.3",
+    "npm-force-resolutions": "^0.0.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
     "watchify": "^3.5.0"
