--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -5,11 +5,11 @@
   "main": "index.html",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "preinstall": "npm install npm-force-resolutions && npm-force-resolutions",
     "watch": "gulp watch",
     "build": "gulp",
     "deploy": "scripts/deploy",
-    "serve": "python -m http.server 8000"
+    "serve": "python -m http.server 8000",
+    "dev": "vite"
   },
   "author": "John J Czaplewski <jczaplew@gmail.com>",
   "license": "CC0-1.0",
@@ -30,6 +30,7 @@
     "xhr": "^2.0.3"
   },
   "devDependencies": {
+    "@vitejs/plugin-react": "^4.2.1",
     "babelify": "^6.1.3",
     "browserify": "^11.0.1",
     "gulp": "^3.9.0",
@@ -39,12 +40,9 @@
     "gulp-minify-css": "^1.2.0",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^1.2.0",
-    "npm-force-resolutions": "^0.0.3",
     "vinyl-buffer": "^1.0.0",
     "vinyl-source-stream": "^1.1.0",
+    "vite": "^5.0.12",
     "watchify": "^3.5.0"
-  },
-  "resolutions": {
-    "graceful-fs": "^4.2.4"
   }
 }
