--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -4,11 +4,6 @@
   "description": "",
   "main": "index.html",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "watch": "gulp watch",
-    "build": "gulp",
-    "deploy": "scripts/deploy",
-    "serve": "python -m http.server 8000",
     "dev": "vite"
   },
   "author": "John J Czaplewski <jczaplew@gmail.com>",
@@ -31,18 +26,6 @@
   },
   "devDependencies": {
     "@vitejs/plugin-react": "^4.2.1",
-    "babelify": "^6.1.3",
-    "browserify": "^11.0.1",
-    "gulp": "^3.9.0",
-    "gulp-concat": "^2.6.0",
-    "gulp-htmlhint": "^0.3.0",
-    "gulp-jshint": "^1.11.2",
-    "gulp-minify-css": "^1.2.0",
-    "gulp-sourcemaps": "^1.6.0",
-    "gulp-uglify": "^1.2.0",
-    "vinyl-buffer": "^1.0.0",
-    "vinyl-source-stream": "^1.1.0",
-    "vite": "^5.0.12",
-    "watchify": "^3.5.0"
+    "vite": "^5.0.12"
   }
 }
