--- a/packages/sift/package.json
+++ b/packages/sift/package.json
@@ -2,20 +2,23 @@
   "name": "@macrostrat-web/sift",
   "version": "0.2.0",
   "description": "",
-  "main": "index.html",
+  "main": "src/index.tsx",
+  "module": "src/index.tsx",
   "scripts": {
     "dev": "vite"
   },
   "author": "John J Czaplewski <jczaplew@gmail.com>",
   "license": "CC0-1.0",
   "dependencies": {
+    "@macrostrat/hyper": "^2.2.1",
     "async": "^1.5.2",
     "chart.js": "^1.0.2",
     "fastclick": "^1.0.6",
     "leaflet": "^1.0.0-beta.2",
     "leaflet-hash": "^0.2.1",
-    "react": "^0.13.3",
-    "react-router": "^0.13.3",
+    "react": "^18",
+    "react-dom": "^18",
+    "react-router-dom": "^6.21.3",
     "topojson": "1.6.19",
     "turf-centroid": "^1.1.2",
     "turf-convex": "^1.0.1",
@@ -25,6 +28,8 @@
     "xhr": "^2.0.3"
   },
   "devDependencies": {
+    "@types/react": "^18",
+    "@types/react-dom": "^18",
     "@vitejs/plugin-react": "^4.2.1",
     "vite": "^5.0.12"
   }
