Create a 'format' script

--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "build": "vite build",
     "server": "node ./server/index.js",
     "server:dev": "node --env-file=.env ./server/index.js",
+    "format": "prettier --write src packages",
     "server:prod": "NODE_ENV=production npm run server"
   },
   "workspaces": [
