Format codebase with prettier

--- a/.github/workflows/test-build.yaml
+++ b/.github/workflows/test-build.yaml
@@ -2,9 +2,9 @@ name: Test Website Build
 
 on:
   push:
-    branches: [ main ]
+    branches: [main]
   pull_request:
-    branches: [ main ]
+    branches: [main]
 
 jobs:
   test-build:
@@ -12,10 +12,10 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
-          submodules: 'recursive'
+          submodules: "recursive"
       - uses: actions/setup-node@v4
         with:
           node-version: 20
-          cache: 'npm'
+          cache: "npm"
       - run: yarn install
       - run: yarn build
