Integrated Sift with Vike
- Got image linking to mostly work
- Fix styles

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,7 +9,7 @@
   // Disable organized imports for typescript
   "[typescript]": {
     "editor.codeActionsOnSave": {
-      "source.organizeImports": false
+      "source.organizeImports": "never"
     }
   }
 }
