--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "server": "node ./server/index.js",
     "server:dev": "node --env-file=.env ./server/index.js",
     "format": "prettier --write src packages",
-    "server:prod": "NODE_ENV=production npm run server",
+    "server:prod": "NODE_ENV=production yarn run server",
     "dev:storybook": "yarn workspace @macrostrat/storybook run dev",
     "start": "yarn run build && yarn run server"
   },
@@ -38,7 +38,7 @@
     "@mdx-js/rollup": "^2.3.0",
     "@typescript-eslint/eslint-plugin": "^6.3.0",
     "@typescript-eslint/parser": "^6.3.0",
-    "@yarnpkg/sdks": "^3.0.0-rc.39",
+    "@yarnpkg/sdks": "^3.1.0",
     "prettier": "^2.7.1",
     "sass": "^1.49.0",
     "stylus": "^0.55.0",
