--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -7,6 +7,9 @@ on:
       - v[0-9]+.[0-9]+.[0-9]+-** # Semver Pre-Release
   pull_request:
     branches: [main]
+  push:
+    branches:
+      - main
 
 jobs:
   docker:
