--- a/.github/workflows/build-dev.yaml
+++ b/.github/workflows/build-dev.yaml
@@ -2,14 +2,9 @@ name: Build Development
 
 on:
   push:
-    branches: ["**"]
-    tags:
-      - v[0-9]+.[0-9]+.[0-9]+-** # Semver Pre-Release
+    branches: ["main"]
   pull_request:
     branches: [main]
-  push:
-    branches:
-      - main
 
 jobs:
   docker:
