--- a/package.json
+++ b/package.json
@@ -104,6 +104,7 @@
     "jose": "^5.1.2",
     "mapbox-gl": "^2.15.0",
     "new-github-issue-url": "^1.0.0",
+    "postgrest-js": "^1.0.0-rc2",
     "react": "^18.2.0",
     "react-cookie": "^3.0.4",
     "react-dom": "^18.2.0",
