Switch to postgrest-js

--- a/package.json
+++ b/package.json
@@ -68,6 +68,7 @@
     "@macrostrat/style-system": "workspace:*",
     "@macrostrat/timescale": "workspace:*",
     "@macrostrat/ui-components": "workspace:*",
+    "@supabase/postgrest-js": "^1.11.0",
     "@turf/bbox": "^6.5.0",
     "@turf/boolean-contains": "^6.5.0",
     "@turf/buffer": "^6.5.0",
@@ -104,7 +105,6 @@
     "jose": "^5.1.2",
     "mapbox-gl": "^2.15.0",
     "new-github-issue-url": "^1.0.0",
-    "postgrest-js": "^1.0.0-rc2",
     "react": "^18.2.0",
     "react-cookie": "^3.0.4",
     "react-dom": "^18.2.0",
