--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "@loadable/component": "^5.14.1",
     "@macrostrat-web/data-sheet-test": "workspace:*",
     "@macrostrat-web/globe": "workspace:*",
+    "@macrostrat-web/map-utils": "workspace:*",
     "@macrostrat-web/security": "workspace:*",
     "@macrostrat-web/settings": "workspace:*",
     "@macrostrat-web/sift": "workspace:*",
