--- a/package.json
+++ b/package.json
@@ -121,6 +121,7 @@
     "resium": "^1.13.1",
     "sirv": "^2.0.3",
     "supports-color": "^9.4.0",
+    "swagger-ui-react": "^5.12.3",
     "topojson-client": "^3.0.0",
     "transition-hook": "^1.5.2",
     "use-debounce": "^9.0.4",
