Improve running documentation and remove scary errors

--- a/.env.example
+++ b/.env.example
@@ -1,9 +1,18 @@
-VITE_MAPBOX_API_TOKEN='<your-mapbox-api-token>'
-VITE_MACROSTRAT_TILESERVER_V2='https://dev.macrostrat.org/tiles'
-VITE_MACROSTRAT_TILESERVER_V1='https://tiles.macrostrat.org'
-VITE_MACROSTRAT_TILESERVER_DOMAIN='https://dev.macrostrat.org/tiles'
+# Required variables
+VITE_MAPBOX_API_TOKEN='<your-api-key>'
+VITE_MACROSTRAT_TILESERVER_DOMAIN='https://tileserver.staging.svc.macrostrat.org'
 VITE_MACROSTRAT_API_DOMAIN='https://macrostrat.org'
-VITE_MACROSTRAT_INGEST_API=https://dev.macrostrat.org/api/ingest
-VITE_CORELLE_API_DOMAIN='https://rotate.macrostrat.org'
-PUBLIC_URL='/'
-SECRET_KEY='Replace with api signing key'
+
+# Needed for map ingestion system
+# VITE_MACROSTRAT_INGEST_API=https://dev.macrostrat.org/api/ingest
+# SECRET_KEY='Replace with api signing key'
+
+# Needed for legacy map comparisons
+# VITE_MACROSTRAT_TILESERVER_V2='https://dev.macrostrat.org/tiles'
+# VITE_MACROSTRAT_TILESERVER_V1='https://tiles.macrostrat.org'
+
+# Needed for paleogeography
+# VITE_CORELLE_API_DOMAIN='https://rotate.macrostrat.org'
+
+# Needed for non-root installations (deprecated)
+# PUBLIC_URL='/'
