--- a/.github/workflows/test-build.yaml
+++ b/.github/workflows/test-build.yaml
@@ -16,5 +16,6 @@ jobs:
       - uses: actions/setup-node@v4
         with:
           node-version: 20
+          cache: "npm"
       - run: yarn install
       - run: yarn build
