Basic lith hierarchy sort of works

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -9,6 +9,7 @@
     "jsx": "react-jsx",
     "skipLibCheck": true,
     "esModuleInterop": true,
+    "downlevelIteration": true,
     "paths": {
       "~/*": ["./src/*"],
       "@macrostrat/cesium-vector-provider": [
