--- a/packages/lithology-hierarchy/package.json
+++ b/packages/lithology-hierarchy/package.json
@@ -10,6 +10,7 @@
     "@visx/gradient": "^3.3.0",
     "@visx/group": "^3.3.0",
     "@visx/hierarchy": "^3.3.0",
+    "@visx/zoom": "^3.3.0",
     "chroma-js": "^2.4.2",
     "react": "^18.2.0"
   }
