Start adding auth components

--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@macrostrat-web/sift": "workspace:*",
     "@macrostrat/api-utils": "workspace:*",
     "@macrostrat/api-views": "workspace:*",
+    "@macrostrat/auth-components": "workspace:*",
     "@macrostrat/color-utils": "workspace:*",
     "@macrostrat/column-components": "workspace:*",
     "@macrostrat/column-views": "workspace:*",
