Rename ENABLE_AUTH to DEV_ENABLE_AUTH for clarity

--- a/.env.example
+++ b/.env.example
@@ -18,4 +18,4 @@ VITE_MACROSTRAT_API_DOMAIN='https://macrostrat.org'
 # PUBLIC_URL='/'
 
 # 'true' to enable auth in development mode
-# ENABLE_AUTH=true
+# DEV_ENABLE_AUTH=true
