Added feedback component

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "@macrostrat/column-components": "workspace:*",
     "@macrostrat/column-views": "workspace:*",
     "@macrostrat/data-sheet2": "workspace:*",
+    "@macrostrat/feedback-components": "workspace:*",
     "@macrostrat/hyper": "^2.2.1",
     "@macrostrat/map-interface": "workspace:*",
     "@macrostrat/mapbox-react": "workspace:^2.1.0",
