--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "skipLibCheck": true,
     "esModuleInterop": true,
     "downlevelIteration": true,
+    "module": "ESNext",
     "paths": {
       "~/*": ["./src/*"],
       "@macrostrat/cesium-vector-provider": [
