--- a/package.json
+++ b/package.json
@@ -5,14 +5,13 @@
   "description": "Macrostrat map interface",
   "type": "module",
   "scripts": {
-    "bundle": "vite build",
     "clean": "rm -rf dist/*",
     "dev": "NODE_NO_WARNINGS=1 yarn run server:dev",
     "build": "vite build",
     "server": "node ./server/index.js",
     "server:dev": "node --env-file=.env ./server/index.js",
     "format": "prettier --write src packages",
-    "server:prod": "NODE_ENV=production yarn run server",
+    "server:prod": "NODE_NO_WARNINGS=1 NODE_ENV=production yarn run server",
     "dev:storybook": "yarn workspace @macrostrat/storybook run dev",
     "start": "yarn run build && yarn run server"
   },
