--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -25,7 +25,7 @@ jobs:
           tags: |
             type=raw,value=sha-{{sha}}
             type=raw,value=latest-itb
-            type=match,value=latest,pattern=v\d+.\d+.\d+
+            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/v') && !contains(github.ref, '-')}}
             type=raw,value=latest-itb-{{date 'YYYYMMDDHHmmss'}}
             type=ref,event=pr,suffix=-{{date 'YYYYMMDDHHmmss'}}
             type=ref,event=branch,suffix=-{{date 'YYYYMMDDHHmmss'}}
