Greatly simplify tsconfig to fix project navigation in VSCode

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,11 @@
     "editor.codeActionsOnSave": {
       "source.organizeImports": "never"
     }
-  }
+  },
+  "cSpell.enableFiletypes": [
+    "!javascript",
+    "!javascriptreact",
+    "!scss",
+    "!typescript"
+  ]
 }
