Finalize multiscale figure

--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "@macrostrat/style-system": "workspace:*",
     "@macrostrat/timescale": "workspace:*",
     "@macrostrat/ui-components": "workspace:*",
+    "@react-hook/size": "^2.1.2",
     "@supabase/postgrest-js": "^1.11.0",
     "@turf/bbox": "^6.5.0",
     "@turf/boolean-contains": "^6.5.0",
@@ -118,6 +119,7 @@
     "react-router": "^6.8.2",
     "react-router-dom": "^6.8.2",
     "react-router-hash-link": "^2.4.3",
+    "react-spring": "^9.7.3",
     "reduce-reducers": "^1.0.4",
     "redux": "^4.0.5",
     "sirv": "^2.0.3",
